Revision history for Perl extension Module::Build.

0.27_04

 - Documented and improved reliminary support for more Getopt::Long
   style options are supported, including boolean options (--verbose,
   --no-verbose), and use of hyphens in option names in addition to
   underscores.

 - The option to disable/enable reading of the ~/.modulebuildrc file
   is changed from 'skip_rcfile' to 'use_rcfile'

 - Allow the 'distmeta' action to continue when 'MANIFEST' is missing,
   omitting the generation of the 'provieds' field. [Steven Schubiger]

 - Fixed some failing regex from generated MANIFEST.SKIP file.

 - Fixed an edge case in $VERSION parsing where we thought a package()
   declaration was happening but it wasn't. [David Golden]

 - Added docs for the install_destination() and install_types() methods.

0.27_03 (Beta for 0.28)  Mon Oct 10 11:19:23 EDT 2005

 - We now use ExtUtils::CBuilder to do all compiling of C code (for
   example, when compiling XS modules).  (This change actually
   occurred in 0.27_01, but it was mistakenly omitted from the Changes
   file.)

 - Fixed an issue on Win32 (and other case-tolerant
   non-case-preserving systems, possibly like VMS?) in which the
   current working directory would sometimes be reported with
   different case, fooling us into thinking that we were in the wrong
   directory. [David Golden]

 - The extra_compiler_flags setting was not actually being passed
   along to ExtUtils::CBuilder so it could pass it along to the
   compiler.  Now it is.

 - The synonyms 'scripts' and 'prereq' for 'script_files' and
   'requires' were broken in a previous version (0.27_01, probably),
   but now they're fixed. [David Golden]
 
 - Previously, we assumed that any custom subclass of Module::Build
   was located in _build/lib/.  This is only true if the author used
   the subclass() method, though.  We now use %INC to find where the
   custom subclass really is, so that we can "use lib" it.  We also