@@ -1,12 +1,16 @@
 use strict;
 use Config;
 
-# In case the test wants to use Test::More or our other bundled
-# modules, make sure they can be loaded.  They'll still do "use
-# Test::More" in the test script.
 BEGIN {
+
+  # In case the test wants to use Test::More or our other bundled
+  # modules, make sure they can be loaded.  They'll still do "use
+  # Test::More" in the test script.
   my $t_lib = File::Spec->catdir('t', 'lib');
   push @INC, $t_lib; # Let user's installed version override
+
+  # Make sure none of our tests load the users ~/.modulebuildrc file
+  $ENV{MODULEBUILDRC} = 'NONE';
 }
 
 
