@@ -53,7 +53,7 @@ my @make = $Config{make} eq 'nmake' ? ('nmake', '-nologo') : ($Config{make});
 #########################
 
 
-my $mb = Module::Build->new_from_context( use_rcfile => 0 );
+my $mb = Module::Build->new_from_context;
 ok $mb;
 
 foreach my $type (@makefile_types) {
@@ -94,7 +94,7 @@ foreach my $type (@makefile_types) {
   # Make sure custom builder subclass is used in the created
   # Makefile.PL - make sure it fails in the right way here.
   local @Foo::Builder::ISA = qw(Module::Build);
-  my $foo_builder = Foo::Builder->new_from_context( use_rcfile => 0 );
+  my $foo_builder = Foo::Builder->new_from_context;
   foreach my $style ('passthrough', 'small') {
     Module::Build::Compat->create_makefile_pl($style, $foo_builder);
     ok -e 'Makefile.PL';
@@ -109,7 +109,7 @@ foreach my $type (@makefile_types) {
   }
   
   # Now make sure it can actually work.
-  my $bar_builder = Module::Build->subclass( class => 'Bar::Builder' )->new_from_context( use_rcfile => 0 );
+  my $bar_builder = Module::Build->subclass( class => 'Bar::Builder' )->new_from_context;
   foreach my $style ('passthrough', 'small') {
     Module::Build::Compat->create_makefile_pl($style, $bar_builder);
     ok -e 'Makefile.PL';
@@ -124,7 +124,6 @@ foreach my $type (@makefile_types) {
   my $libdir = File::Spec->catdir( $cwd, 't', 'libdir' );
   my $result = $mb->run_perl_script('Makefile.PL', [],
 				     [
-				      'USE_RCFILE=0',
 				      "LIB=$libdir",
 				      'TEST_VERBOSE=1',
 				      'INSTALLDIRS=perl',
