@@ -32,7 +32,7 @@ $dist->regen;
 chdir( $dist->dirname ) or die "Can't chdir to '@{[$dist->dirname]}': $!";
 
 use Module::Build;
-my $mb = Module::Build->new_from_context( use_rcfile => 0 );
+my $mb = Module::Build->new_from_context;
 my $provides; # Used a bunch of times below
 
 ############################## Single Module
@@ -45,7 +45,7 @@ package Simple;
 $VERSION = '1.23';
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Simple' => {file => 'lib/Simple.pm',
 			version => '1.23'}});
@@ -54,7 +54,7 @@ $dist->change_file( 'lib/Simple.pm', <<'---' );
 package Simple;
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Simple' => {file => 'lib/Simple.pm'}});
 
@@ -66,7 +66,7 @@ package Foo::Bar;
 $VERSION = '1.23';
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Foo::Bar' => { file => 'lib/Simple.pm',
 			   version => '1.23' }});
@@ -75,7 +75,7 @@ $dist->change_file( 'lib/Simple.pm', <<'---' );
 package Foo::Bar;
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Foo::Bar' => { file => 'lib/Simple.pm'}});
 
@@ -91,7 +91,7 @@ package Foo::Bar;
 $VERSION = '1.23';
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Simple'   => { file => 'lib/Simple.pm',
 			   version => '1.23' },
@@ -110,7 +110,7 @@ package Foo::Bar;
 $VERSION = '1.23';
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Foo'      => { file => 'lib/Simple.pm',
 			   version => '1.23' },
@@ -128,7 +128,7 @@ package Simple;
 package Simple;
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Simple' => { file => 'lib/Simple.pm' }});
 
@@ -144,7 +144,7 @@ $VERSION = '1.23';
 package Simple;
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Simple' => { file => 'lib/Simple.pm',
 			 version => '1.23' }});
@@ -161,7 +161,7 @@ package Simple;
 $VERSION = '1.23';
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Simple' => { file => 'lib/Simple.pm',
 			 version => '1.23' }});
@@ -179,9 +179,7 @@ $VERSION = '2.34';
 ---
 $dist->regen( clean => 1 );
 my $err = '';
-$err = stderr_of( sub {
-  $mb = Module::Build->new_from_context( use_rcfile => 0 )
-} );
+$err = stderr_of( sub { $mb = Module::Build->new_from_context } );
 $err = stderr_of( sub { $provides = $mb->find_dist_packages } );
 is_deeply($provides,
 	  {'Simple' => { file => 'lib/Simple.pm',
@@ -200,9 +198,7 @@ package Foo;
 $VERSION = '2.34';
 ---
 $dist->regen( clean => 1 );
-$err = stderr_of( sub {
-  $mb = Module::Build->new_from_context( use_rcfile => 0 );
-} );
+$err = stderr_of( sub { $mb = Module::Build->new_from_context } );
 $err = stderr_of( sub { $provides = $mb->find_dist_packages } );
 is_deeply($provides,
 	  {'Foo' => { file => 'lib/Simple.pm',
@@ -224,7 +220,7 @@ $dist->add_file( 'lib/Simple2.pm', <<'---' );
 package Simple;
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Simple' => { file => 'lib/Simple.pm' }});
 $dist->remove_file( 'lib/Simple2.pm' );
@@ -242,7 +238,7 @@ $dist->add_file( 'lib/Simple2.pm', <<'---' );
 package Simple;
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Simple' => { file => 'lib/Simple.pm',
 			 version => '1.23' }});
@@ -262,7 +258,7 @@ package Simple;
 $VERSION = '1.23';
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Simple' => { file => 'lib/Simple2.pm',
 			 version => '1.23' }});
@@ -282,7 +278,7 @@ package Simple;
 $VERSION = '2.34';
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 $err = stderr_of( sub { $provides = $mb->find_dist_packages } );
 is_deeply($provides,
 	  {'Simple' => { file => 'lib/Simple.pm',
@@ -305,7 +301,7 @@ package Simple;
 $VERSION = '1.23';
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 $err = stderr_of( sub { $provides = $mb->find_dist_packages } );
 is_deeply($provides,
 	  {'Simple' => { file => 'lib/Simple.pm',
@@ -329,7 +325,7 @@ $dist->add_file( 'lib/Simple2.pm', <<'---' );
 package Foo;
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 $provides = $mb->find_dist_packages;
 ok( exists( $provides->{Foo} ) ); # it exist, can't predict which file
 $dist->remove_file( 'lib/Simple2.pm' );
@@ -347,7 +343,7 @@ $dist->add_file( 'lib/Simple2.pm', <<'---' );
 package Foo;
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Foo' => { file => 'lib/Simple.pm',
 		      version => '1.23' }});
@@ -366,7 +362,7 @@ package Foo;
 $VERSION = '1.23';
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Foo' => { file => 'lib/Simple2.pm',
 		      version => '1.23' }});
@@ -386,7 +382,7 @@ package Foo;
 $VERSION = '2.34';
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 $err = stderr_of( sub { $provides = $mb->find_dist_packages } );
 # XXX Should 'Foo' exist ??? Can't predict values for file & version
 ok( exists( $provides->{Foo} ) );
@@ -408,7 +404,7 @@ package Foo;
 $VERSION = '1.23';
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 $err = stderr_of( sub { $provides = $mb->find_dist_packages } );
 ok( exists( $provides->{Foo} ) );
 is( $provides->{Foo}{version}, '1.23' );
@@ -434,7 +430,7 @@ $VERSION = '2.34';
 ---
 $dist->regen( clean => 1 );
 $err = stderr_of( sub {
-  $mb = Module::Build->new_from_context( use_rcfile => 0 );
+  $mb = Module::Build->new_from_context;
 } );
 $err = stderr_of( sub { $provides = $mb->find_dist_packages } );
 is_deeply($provides,
@@ -460,7 +456,7 @@ $VERSION = '2.34';
 ---
 $dist->regen( clean => 1 );
 $err = stderr_of( sub {
-  $mb = Module::Build->new_from_context( use_rcfile => 0 );
+  $mb = Module::Build->new_from_context;
 } );
 $err = stderr_of( sub { $provides = $mb->find_dist_packages } );
 is_deeply($provides,
@@ -486,7 +482,7 @@ package Simple::_private::too;
 $VERSION = '3.45';
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages,
 	  {'Simple' => { file => 'lib/Simple.pm',
 			 version => '1.23' }});
@@ -499,7 +495,7 @@ is_deeply($mb->find_dist_packages,
 
 $dist->change_file( 'lib/Simple.pm', '' );
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply( $mb->find_dist_packages, {} );
 
 # Simple.pm => =pod..=cut (no package declaration)
@@ -517,7 +513,7 @@ Doesn't do anything.
 =cut
 ---
 $dist->regen( clean => 1 );
-$mb = Module::Build->new_from_context( use_rcfile => 0 );
+$mb = Module::Build->new_from_context;
 is_deeply($mb->find_dist_packages, {});
 
 
